--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,9 +1,9 @@
 {
     "tasks": [
-        {
+        {   
             "type": "shell",
-            "label": "gcc build active file",
-            "command": "/usr/bin/gcc",
+            "label": "compile",
+            "command": "/usr/bin/g++",
             "args": [
                 "-g",
                 "${file}",
